# dreadnought

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  debug.py  dreadnought_design.plan.md  fly.toml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: __init__.py  db.py  enemies.py  entities.json  hazards.py  hull_templates.py  interactables.py  items.py  names.json  names.py  star_types.py
docs/: emergent_interactions_plan.md
engine/: __init__.py  font.py  game_state.py  message_log.py
game/: __init__.py  actions.py  ai.py  consumables.py  entity.py  environment.py  gore.py  hazards.py  helpers.py  loadout.py  scanner.py  ship.py  suit.py
tests/: conftest.py  test_actions.py  test_ai.py  test_ai_item_usage.py  test_airlock.py  test_airlock_switch.py  test_auth.py  test_briefing_state.py  test_bug_fixes.py  test_bug_fixes_batch2.py  test_cargo_state.py  test_carry_capacity.py  test_chat_api.py  test_chat_cleanup.py  test_chat_db.py  test_code_review_fixes.py  test_colors.py  test_confirm_quit.py  test_console_serializer.py  test_consumables.py  test_damage_helpers.py  test_data_definitions.py  test_db.py  test_death_gore.py  test_debug.py  test_decompression.py  test_dreadnought_spawn.py  test_drop_item.py  test_dungeon_gen.py  test_edge_cases.py  test_enemy_drops.py  test_enemy_inventory.py  test_enemy_melee_power.py  test_enemy_spawn_inventory.py  test_engine_package.py  test_engine_state.py  test_engine_states.py  test_entity.py  test_entity_serialization.py  test_env_entity.py  (+71 more)
ui/: __init__.py  briefing_state.py  cargo_state.py  colors.py  confirm_quit_state.py  (+9 more)
(+36 files in other folders)
