[project]
name = "dreadnought"
version = "0.1.0"
description = "A sci-fi roguelike built with Python and python-tcod"
requires-python = ">=3.12"
dependencies = [
    "tcod>=15.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "bcrypt>=4.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.27",
    "ruff>=0.15.0",
]

[tool.setuptools.packages.find]
include = ["data", "engine", "game", "ui", "web", "world"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade (modernize syntax)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
